# Food-everywhere

./: db.sqlite3  pyproject.toml
food/: settings.py  urls.py
foods/: forms.py  models.py  urls.py  views.py
foods/migrations/: 0001_initial.py  0002_remove_item_item_price.py  0003_auto_20210225_1937.py  0004_data_food_image.py  0005_auto_20210226_2032.py  0006_auto_20210226_2043.py
foods/static/: style.css
foods/templates/: about.html  base.html  delete_item.html  details.html  forms.html  index.html
users/: views.py
users/templates/: login.html  logout.html  register.html
